time css bug squashed

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -751,6 +751,16 @@ textarea {
   color: black;
 }
 
+.flatpickr-hour {
+  margin-top: 0 !important;
+  margin-bottom: .8rem;
+}
+
+.flatpickr-minute {
+  margin-top: 0 !important;
+  margin-bottom: .8rem;
+}
+
 .chosen-search input {
   box-sizing: border-box;
 }
